# aiLanguageTutor

./: !_wishes.txt  !endpoints.md  .cursorrules  .gitignore  AGENTS.md  AI_ARCHITECTURE.md  AI_LANGUAGE_TUTOR_SCIENTIFIC_ARTICLE.md  AI_LANGUAGE_TUTOR_SCIENTIFIC_ARTICLE_version_with_CODE.md  AI_MODEL_SELECTION_IMPLEMENTATION.md  API_REFERENCE.md  ARCHON_INTEGRATION.md  ARCHON_MIGRATION_COMPLETE.md  ARCHON_QUICK_REFERENCE.md  ARHITEKTURA_GRAFI.md  CANDO_V2_DEBUGGING_GUIDE.md  CANDO_V2_FINAL_STATUS.md  CANDO_V2_FIXES_APPLIED.md  CANDO_V2_STATUS_REPORT.md  CANDO_V2_SUCCESS_SUMMARY.md  CODE_ASSESSMENT.md  CODE_ASSESSMENT_COMPREHENSIVE.md  CONTENT_ANALYSIS_SYSTEM.md  CONTENT_ANALYSIS_SYSTEM_UPDATED.md  DATABASE_COMPLIANCE_REPORT.md  DATA_MANAGEMENT_STRATEGY.md  EXTRACTION_RESPONSE_FINAL_SUMMARY.md  EXTRACTION_RESPONSE_QUICK_REFERENCE.md  FRONTEND_INTEGRATION_COMPLETE.md  GOOGLE_GENAI_MIGRATION_NOTICE.md  GRAMMAR_INTEGRATION_GUIDE.md  GRAMMAR_SERVICE_USAGE_GUIDE.md  HUMAN_TUTOR_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  LEARNING_PATH_FIXES_SUMMARY.md  LEGACY_MIGRATION_PLAN.md  LESSONROOT_INTEGRATION.md  MARUGOTO_GRAMMAR_SYSTEM.md  MULTILINGUAL_DISPLAY_SYSTEM.md  MULTI_LANGUAGE_EXPANSION_STRATEGY.md  PHASE_0_RESTART_GUIDE.md  (+35 more)
backend/: .dockerignore  BACKEND_DATABASE_IMPROVEMENTS.md  BACKEND_DATABASE_IMPROVEMENTS_IMPLEMENTED.md  CODEBASE_REVIEW.md  DATABASE_CONNECTION_VERIFICATION.md  Dockerfile  EXTRACTION_RESPONSE_FRONTEND_INTEGRATION.md  EXTRACTION_RESPONSE_IMPLEMENTATION.md  EXTRACTION_RESPONSE_TESTING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LESSON_PLAN_CREATION_FLOW.md  LESSON_PLAN_IMPROVEMENTS.md  LESSON_PLAN_IMPROVEMENTS_IMPLEMENTED.md  LEXICAL_NETWORK_BUILD_STATUS.md  LEXICAL_NETWORK_IMPLEMENTATION_SUMMARY.md  LEXICAL_NETWORK_NEXT_STEPS.md  MIGRATIONS_APPLIED.md  PROFILE_BUILDING_CONNECTION_ANALYSIS.md  QUICK_START_LEXICAL_NETWORK.md  README.md  TASK.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_VERIFICATION_COMPLETE.md  check_config.py  check_db.py  check_openai_models.py  hash.txt  import_lesson.py  import_neo4j_complete.py  import_neo4j_simple.py  import_neo4j_utf8.py  lexical_network_api_demo.html  openapi.json  pyproject.toml  run_path_module_tests.py  run_tests_minimal.py  test_lexical_api.html  test_path_module_integration.py  verify_migrations.py
backend/app/: __init__.py  db.py  main.py
backend/docs/: LEXICAL_RELATIONS_CLEANUP.md  NETWORK_GENERATION_POS_UPDATES.md  POS_NORMALIZATION_COMPLETE_SUMMARY.md  UNIDIC_POS_NORMALIZATION.md
backend/lessons_v2/: canDo_JF_105_v1.json  canDo_JF_106_v1.json  canDo_JFまるごと_14_v1.json
backend/migrations/: 2025-09-11_cleanup_orthography_schema.cypher  2025-10-06_create_lessons_schema.sql  2025-10-15_add_pgvector_lessons.sql  2025-10-28_add_guided_columns.sql  2025-11-06_enrich_chat_sessions_pgvector.sql  add_lesson_sessions_table.sql  add_topic_translations.py  ai_content_schema.cypher  create_cando_vector_index.cypher  create_performance_indexes.cypher  enhanced_neo4j_schema.cypher  init.sql
backend/scripts/: add_test_image_path.py  batch_compile_10.py  canDo_creation_new.py  check_pos_progress.py  cleanup_old_lessons.py  compile_a1_batch.py  compile_cando_lesson_v2.py  copy_images_to_public.py  create_admin_user.py  debug_login.py  example_lexical_network_usage.py  fix_image_paths.py  generate_cando_images.py  get_a1_ids.py  import_lesson_json.py  import_lesson_json_simple.py  list_a1_candos.py  migrate_lesson_images.py  migrate_pos_to_unidic.py  monitor_enrichment.sh  ping_llm.py  preload_lessons.py  reset_user_password.py  run_enrichment_until_complete.py  run_lexical_network_migrations.py  run_rag_migration.py  run_rag_tests.ps1  run_unidic_enrichment.py  (+15 more)
(+1044 files in other folders)
